# memgraph

./: .gitignore  CMakeLists.txt
.github/workflows/: diff.yaml
docs/user_technical/: couscous.yml  default.twig
docs/user_technical/css/: bootstrap.min.css  main.css
docs/user_technical/docs/: README.md  installation.md  quick-start.md  upcoming-features.md
docs/user_technical/img/: memgraph-logo-white.ai
docs/user_technical/js/: generated_toc.js
libs/: CMakeLists.txt  setup.sh
src/: memgraph.cpp  mg_import_csv.cpp
src/communication/: result_stream_faker.hpp
src/io/network/: socket.cpp  socket.hpp
src/query/: context.hpp  cypher_query_interpreter.cpp  data_structures.cpp  data_structures.hpp  db_accessor.hpp  dump.cpp  entry.hpp  plan_template_cpp  typed_value.cpp  typed_value.hpp
src/query/backend/: data_structures.hpp
src/query/backend/cpp/: code_generator.cpp  code_generator.hpp  cypher_main_visitor.cpp  cypher_main_visitor.hpp  generator.hpp  typed_value.hpp
src/query/frontend/: stripped_lexer_constants.hpp
src/query/frontend/ast/: ast.hpp  ast.lcp  ast_visitor.hpp  cypher_main_visitor.cpp  cypher_main_visitor.hpp
src/query/frontend/logical/: operator.hpp
src/query/frontend/opencypher/grammar/: MemgraphCypher.g4  MemgraphCypherLexer.g4
src/query/frontend/semantic/: symbol_generator.cpp  symbol_generator.hpp
src/query/interpret/: eval.hpp  frame.hpp
src/query/plan/: operator.cpp  operator.lcp  pretty_print.hpp  rule_based_planner.hpp  variable_start_planner.cpp
src/query/plan/rewrite/: index_lookup.cpp  index_lookup.hpp
src/query/procedure/: module.cpp  module.hpp
src/slk/: serialization.hpp
src/storage/v2/: name_id_mapper.hpp  storage.cpp  storage.hpp
src/storage/v2/durability/: serialization.cpp  serialization.hpp
src/storage/v2/replication/: replication_client.cpp  serialization.cpp  serialization.hpp
src/utils/: file.cpp  file.hpp  fnv.hpp  logging.hpp  settings.cpp  skip_list.hpp  string.hpp
tests/: CMakeLists.txt
tests/manual/: demo_query_engine.cpp  query_code_generator.cpp
tests/rpc/: CMakeLists.txt
tests/rpc/capnproto/: CMakeLists.txt  memgraph.capnp  memgraph_client.cpp  memgraph_server.cpp
tests/rpc/grpc/: CMakeLists.txt  memgraph.proto  memgraph_async_client.cpp  memgraph_async_server.cpp  memgraph_callback_server.cpp  memgraph_server.cpp
tests/unit/: CMakeLists.txt  cypher_main_visitor.cpp  query_data_structures.cpp
